# SSKTS-343 - Authorizationヘッダー追加。 - 説明追記。
